# my-finance-tracker

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  PRODUCT.md  README.md  finance.cmd  pyproject.toml  run-daily.cmd
.github/workflows/: tests.yml
config/: accounts.example.yaml  categories.example.yaml  categories.yaml  iban_map.example.yaml  notion.example.yaml  rules.yaml
finance/: __init__.py  categorise.py  cli.py  config.py  db.py  forecast.py  ingest.py  models.py  narrate.py  normalise.py  notion_sync.py  periods.py  plan.py  report_html.py  report_md.py  review.py  schema.sql  sinking.py  theme.py  transfers.py  variance.py  webapp.py
finance/parsers/: __init__.py  base.py  ila_account.py  ila_cc.py  khaleeji_ocr.py  khaleeji_text.py
finance/templates/: dashboard.html.j2
tests/: test_forecast.py  test_ila_account.py  test_ila_cc.py  test_normalise.py  test_notion_pull.py  test_periods.py  test_review.py  test_transfers.py  test_webapp.py
